# SpeechRecognitionPOC

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: lib.rs
src/data_viz/: mod.rs
src/gradient_descent/: mod.rs
