[package]
name = "speech_recognition_poc"
version = "0.1.0"
authors = ["vvv <valentin.blind@gmail.com>", "vvg <guilhem.radonde@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Math library
nalgebra = "0.23"

# Nice and beautiful cli helpers
structopt = "0.3"

# For dataviz
plotters = "0.3"